@@ -17,7 +17,7 @@
 #elif defined(__APPLE__) || defined(__linux__) || \
       defined(__FreeBSD__) || defined(__OpenBSD__) || \
       defined(__sun) || defined(ANDROID) || \
-      defined(__GLIBC__) || defined(__GNU__)
+      defined(__GLIBC__) || defined(__GNU__) || defined(__QNX__)
 #define ANGLE_OS_POSIX
 #else
 #error Unsupported platform.
